solve login register api 404 issue